Initialize Home page Layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="src/scripts/index.js" defer></script>
         <title>Group Think</title>
     </head>
-    <body>
+    <body class="index">
         <main>
             <div class="container">
                 <div class="center">
