Complete profile column

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
                         </ul>
                     </nav>
                     <div class="avatar flexbox">
-                        <img src="src/images/avatar.png" alt="Profile Picture"/>
+                        <img src="src/images/me.jpeg" alt="Profile Picture"/>
                         <div class="dropdown flexbox">
                             <i class="fa-solid fa-angle-up dropbtn"></i>
                             <div class="dropdown-content flexbox">
@@ -48,7 +48,29 @@
                 <div class="home-center">
                     <div class="row">
                         <div class="card profile">
-        
+                            <div class="profile-info">
+                                <div class="img"></div>
+                                <div class="title">
+                                    <h2>Jodi-Ann Barrett</h2>
+                                    <p>Full-Stack Software Developer</p>
+                                </div>
+                                <div class="linkedin">
+                                    <i class="fa-solid fa-link"></i>
+                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/">https://www.linkedin.com/in/jodiannmoorebarrett/</a>
+                                </div>
+                            </div>
+                            <div class="views-connections flexbox">
+                                <div class="connections">
+                                    <p><span class="count">701</span><br>Connections</p>
+                                </div>
+                                <div class="views">
+                                    <p><span class="count">479</span><br>Views</p>
+                                </div>
+                            </div>
+                            <div class="premium-info">
+                                <p>Access exclusive tools and insights</p>
+                                <button>Upgrade to Premium</button>
+                            </div>
                         </div>
                         <div class="card timeline">
                             <!-- <div class="timeline-post">
