Complete users column

--- a/home.html
+++ b/home.html
@@ -34,13 +34,13 @@
                         </ul>
                     </nav>
                     <div class="avatar flexbox">
-                        <img src="src/images/me.jpeg" alt="Profile Picture"/>
-                        <div class="dropdown flexbox">
-                            <i class="fa-solid fa-angle-up dropbtn"></i>
-                            <div class="dropdown-content flexbox">
-                                <a href="#index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a>
-                            </div>
+                        <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
+                        <div class="img">
+                            <img src="src/images/me.jpeg" alt="Profile Picture"/>
                         </div>
+                        <div class="logout">
+                            <a href="index.html"><i class="fa-solid fa-power-off"></i></a>
+                        </div>                   
                     </div>
                 </div>
             </header>
@@ -56,7 +56,7 @@
                                 </div>
                                 <div class="linkedin">
                                     <i class="fa-solid fa-link"></i>
-                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/">https://www.linkedin.com/in/jodiannmoorebarrett/</a>
+                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/" target="_blank">https://www.linkedin.com/in/jodiannmoorebarrett/</a>
                                 </div>
                             </div>
                             <div class="views-connections flexbox">
@@ -94,7 +94,12 @@
                             </div> -->
                         </div>
                         <div class="card users">
-        
+                            <div class="heading">
+                                <h2>People you may know</h2>
+                            </div>
+                            <div class="users">
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -109,12 +114,9 @@
                     <div>
                         <article><p>Careers</p></article>
                         <article><p>Accessibility</p></article>
-                        <article><p>Ad Preferences</p></article>
                     </div>
                     <div>
                         <article><p>Small Business</p></article>
-                        <article><p>Talent Solutions</p></article>
-                        <article><p>Mobile</p></article>
                     </div>
                     <div class="copyright">
                         <p>&copy; 2022 Jodi-Ann Barrett</p>
