Update Login page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="flexbox">
                                     <input type="button" class="submit" value="Submit"/>
-                                    <input type="button" class="secondary create-account" value="Submit"/>
+                                    <input type="button" class="secondary create-account" value="Create Account"/>
                                 </div>
                             </form>
                             <ul>
