--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                                 </div>
                                 <div class="linkedin">
                                     <i class="fa-solid fa-link"></i>
-                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/" target="_blank">https://www.linkedin.com/in/jodiannmoorebarrett/</a>
+                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/" target="_blank">View My LinkedIn Profile</a>
                                 </div>
                             </div>
                             <div class="views-connections flexbox">
@@ -149,13 +149,13 @@
                 </div>
             </footer>            
         </main>
-        <script>
+        <!-- <script>
             let vh = window.innerHeight * 0.01;
             document.documentElement.style.setProperty('--vh', `${vh}px`);
             window.addEventListener('resize', () => {
               vh = window.innerHeight * 0.01;
               document.documentElement.style.setProperty('--vh', `${vh}px`);
             });
-       </script>
+       </script> -->
     </body>
 </html>
