Update Login page error messages

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                                 <div class="underline current"></div>
                                 <div class="underline"></div>
                             </div>
+                            <div class="message"></div>
                             <form novalidate>
                                 <input type="email" class="email" placeholder="Email" required/>
                                 <input type="password" class="password" placeholder="Password" required>
@@ -48,9 +49,9 @@
                             </form>
                             <ul>
                                 <li>Or login with</li>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">LinkedIn</a></li>
-                                <li><a href="#">Google</a></li>
+                                <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+                                <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
+                                <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
                             </ul>
                         </div>
                     </div>
