Update Header Nav

--- a/home.html
+++ b/home.html
@@ -25,12 +25,12 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a href="#" class="default">Home</a></li>
-                            <li><a href="#">Network</a></li>
-                            <li><a href="#">Messaging</a></li>
-                            <li><a href="#">Notifications</a></li>
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Try Premium</a></li>
+                            <li class="default"><a href="#"><i class="fa-sharp fa-solid fa-house"></i> Home</a></li>
+                            <li><a href="#"><i class="fa-solid fa-users"></i> Network</a></li>
+                            <li><a href="#"><i class="fa-regular fa-envelope"></i> Messaging</a></li>
+                            <li><a href="#"><i class="fa-solid fa-circle-exclamation"></i> Notifications</a></li>
+                            <li><a href="#"><i class="fa-solid fa-chart-line"></i> Jobs</a></li>
+                            <li><a href="#"><i class="fa-solid fa-trophy"></i> Try Premium</a></li>
                         </ul>
                     </nav>
                     <div class="avatar flexbox">
