Add Show Password Feature to Login

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                             <img src="src/images/me.jpeg" alt="Jodi-Ann Barrett"/>
                         </div>
                         <div class="logout">
-                            <a href="index.html" data-title="Logout"><i class="fa-solid fa-power-off"></i></a>
+                            <a href="index.html"><i class="fa-solid fa-power-off" title="Logout"></i></a>
                         </div>                   
                     </div>
                 </div>
