--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                             <form novalidate>
                                 <input type="email" class="email" placeholder="Email" required/>
                                 <input type="password" class="password" placeholder="Password" required>
+                                <i class="fa-solid fa-eye" id="toggle-password" title="Show Password"></i>
                                 <div class="form-links flexbox">
                                     <p>
                                         <input type="checkbox" id="remember-me" name="remember-me"/>
