Adjust height for login view

--- a/index.html
+++ b/index.html
@@ -25,35 +25,37 @@
                             <div class="logo-name">GroupThink</div>
                         </div>
                         <div class="login-view">
-                            <h1>Welcome to <span>GroupThink</span></h1>
-                            <p class="slogan">Think, Explore, Meet.</p>
-                            <div class="flexbox">
-                                <div class="underline current"></div>
-                                <div class="underline"></div>
-                            </div>
-                            <div class="message"></div>
-                            <form novalidate>
-                                <input type="email" class="email" placeholder="Email" required/>
-                                <input type="password" class="password" placeholder="Password" required>
-                                <i class="fa-solid fa-eye" id="toggle-password" title="Show Password"></i>
-                                <div class="form-links flexbox">
-                                    <p>
-                                        <input type="checkbox" id="remember-me" name="remember-me"/>
-                                        <label for="remember-me">Remember Me</label>
-                                    </p>
-                                    <a href="#">Forgot Password?</a>
-                                </div>
+                            <div class="login-view-inner">
+                                <h1>Welcome to <span>GroupThink</span></h1>
+                                <p class="slogan">Think, Explore, Meet.</p>
                                 <div class="flexbox">
-                                    <input type="button" class="submit" value="Submit"/>
-                                    <input type="button" class="secondary create-account" value="Create Account"/>
+                                    <div class="underline current"></div>
+                                    <div class="underline"></div>
                                 </div>
-                            </form>
-                            <ul>
-                                <li>Or login with</li>
-                                <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-                                <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
-                                <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
-                            </ul>
+                                <div class="message"></div>
+                                <form novalidate>
+                                    <input type="email" class="email" placeholder="Email" required/>
+                                    <input type="password" class="password" placeholder="Password" required>
+                                    <i class="fa-solid fa-eye" id="toggle-password" title="Show Password"></i>
+                                    <div class="form-links flexbox">
+                                        <p>
+                                            <input type="checkbox" id="remember-me" name="remember-me"/>
+                                            <label for="remember-me">Remember Me</label>
+                                        </p>
+                                        <a href="#">Forgot Password?</a>
+                                    </div>
+                                    <div class="flexbox">
+                                        <input type="button" class="submit" value="Submit"/>
+                                        <input type="button" class="secondary create-account" value="Create Account"/>
+                                    </div>
+                                </form>
+                                <ul>
+                                    <li>Or login with</li>
+                                    <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
+                                    <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
