Add Vertical Nav Bar when burger menu is visible

--- a/home.html
+++ b/home.html
@@ -17,13 +17,14 @@
     </head>
     <body>
         <main>
+            <div class="overlay"></div>
             <header>
                 <div class="container flexbox">
                     <div class="login-logo-bg">
                         <div class="logo-image"><i class="fa-solid fa-users-rays"></i></div>
                         <div class="logo-name">GroupThink</div>
                     </div>
-                    <nav>
+                    <nav class="horizontal">
                         <ul>
                             <li class="default"><a href="#"><i class="fa-sharp fa-solid fa-house"></i> Home</a></li>
                             <li><a href="#"><i class="fa-solid fa-users"></i> Network</a></li>
