Add refresh link to logo on home page

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                 <div class="container flexbox">
                     <div class="login-logo-bg">
                         <div class="logo-image"><i class="fa-solid fa-users-rays"></i></div>
-                        <div class="logo-name">GroupThink</div>
+                        <div class="logo-name"><a href="home.html">GroupThink</a></div>
                     </div>
                     <nav class="horizontal">
                         <ul>
