--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <div class="container">
                 <div class="center">
-                    <div class="login-container flexbox">
+                    <div class="login-container-full flexbox">
                         <div class="login-logo-bg">
                             <div class="logo-image"><i class="fa-solid fa-users-rays"></i></div>
                             <div class="logo-name">GroupThink</div>
@@ -45,7 +45,7 @@
                                         <a href="#">Forgot Password?</a>
                                     </div>
                                     <div class="flexbox">
-                                        <input type="button" class="submit" value="Submit"/>
+                                        <input type="button" class="submit" value="Login"/>
                                         <input type="button" class="secondary create-account" value="Create Account"/>
                                     </div>
                                 </form>
@@ -55,6 +55,45 @@
                                     <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
                                     <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
                                 </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="login-container-tablet-mobile">
+                        <div class="login-logo-bg">
+                            <div class="logo-image"><i class="fa-solid fa-users-rays"></i></div>
+                            <h1>Welcome to <span>GroupThink</span></h1>
+                            <p class="slogan">Think, Explore, Meet.</p>
+                            <div class="flexbox underlines">
+                                <div class="underline current"></div>
+                                <div class="underline"></div>
+                            </div>
+                            <div class="login-view">
+                                <div class="login-view-inner">
+                                    
+                                    <div class="message"></div>
+                                    <form novalidate>
+                                        <input type="email" class="email" placeholder="Email" required/>
+                                        <input type="password" class="password" placeholder="Password" required>
+                                        <i class="fa-solid fa-eye" id="toggle-password" title="Show Password"></i>
+                                        <div class="form-links flexbox">
+                                            <p>
+                                                <input type="checkbox" id="remember-me" name="remember-me"/>
+                                                <label for="remember-me">Remember Me</label>
+                                            </p>
+                                            <a href="#">Forgot Password?</a>
+                                        </div>
+                                        <div class="flexbox">
+                                            <input type="button" class="submit" value="Login"/>
+                                            <input type="button" class="secondary create-account" value="Create Account"/>
+                                        </div>
+                                    </form>
+                                    <ul>
+                                        <li>Or login with<br></li>
+                                        <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+                                        <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
+                                        <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
