Changes: Added Responsive footer, Update social icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="src/stylesheet/index.css" media="all"/>
         <script src="src/scripts/index.js" defer></script>
@@ -49,12 +50,14 @@
                                         <input type="button" class="secondary create-account" value="Create Account"/>
                                     </div>
                                 </form>
-                                <ul>
-                                    <li>Or login with</li>
-                                    <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
-                                    <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
-                                </ul>
+                                <div class="media-icons-group">
+                                    <p class="media-icons-title">Or login with</p>
+                                    <div class="media-icons">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a href="#"><i class="fab fa-google"></i></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -87,12 +90,14 @@
                                             <input type="button" class="secondary create-account" value="Create Account"/>
                                         </div>
                                     </form>
-                                    <ul>
-                                        <li>Or login with<br></li>
-                                        <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-                                        <li><a href="#"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
-                                        <li><a href="#"><i class="fa-brands fa-google"></i>Google</a></li>
-                                    </ul>
+                                    <div class="media-icons-group">
+                                        <p class="media-icons-title">Or login with</p>
+                                        <div class="media-icons">
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                            <a href="#"><i class="fab fa-google"></i></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
