Changes: Update mobile header for home page

--- a/home.html
+++ b/home.html
@@ -58,7 +58,11 @@
                                 </div>
                                 <div class="linkedin">
                                     <i class="fa-solid fa-link"></i>
-                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/" target="_blank">My LinkedIn Profile</a>
+                                    <a href="https://www.linkedin.com/in/jodiannmoorebarrett/" target="_blank">LinkedIn</a>
+                                </div>
+                                <div class="github">
+                                    <i class="fa-brands fa-github"></i>
+                                    <a href="https://github.com/moorebarrett-jodiann" target="_blank">GitHub</a>
                                 </div>
                             </div>
                             <div class="views-connections flexbox">
